// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxPack renders 0 1`] = `
Array [
  .c0 {
  box-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders function 1`] = `
Array [
  .c0 {
  box-pack: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders invalid theme path 1`] = `
Array [
  .c0 {
  box-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders negative number 1`] = `
Array [
  .c0 {
  box-pack: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  box-pack: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-pack: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-pack: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-pack: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-pack: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-pack: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-pack: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-pack: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-pack: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-pack: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-pack: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  box-pack: July;
}

@media May {
  .c0 {
    box-pack: August;
  }
}

@media April {
  .c0 {
    box-pack: September;
  }
}

@media January {
  .c0 {
    box-pack: November;
  }
}

@media April {
  .c0 {
    box-pack: August;
  }
}

@media June {
  .c0 {
    box-pack: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-pack: July;
}

@media May {
  .c0 {
    box-pack: August;
  }
}

@media April {
  .c0 {
    box-pack: September;
  }
}

@media January {
  .c0 {
    box-pack: November;
  }
}

@media April {
  .c0 {
    box-pack: August;
  }
}

@media June {
  .c0 {
    box-pack: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-pack: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-pack: November;
  }
}

@media April {
  .c0 {
    box-pack: January;
  }
}

@media January {
  .c0 {
    box-pack: December;
  }
}

@media April {
  .c0 {
    box-pack: April;
  }
}

@media June {
  .c0 {
    box-pack: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-pack: November;
  }
}

@media April {
  .c0 {
    box-pack: January;
  }
}

@media January {
  .c0 {
    box-pack: December;
  }
}

@media April {
  .c0 {
    box-pack: April;
  }
}

@media June {
  .c0 {
    box-pack: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    box-pack: July;
  }
}

@media April {
  .c0 {
    box-pack: August;
  }
}

@media January {
  .c0 {
    box-pack: September;
  }
}

@media April {
  .c0 {
    box-pack: November;
  }
}

@media June {
  .c0 {
    box-pack: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-pack: July;
  }
}

@media April {
  .c0 {
    box-pack: August;
  }
}

@media January {
  .c0 {
    box-pack: September;
  }
}

@media April {
  .c0 {
    box-pack: November;
  }
}

@media June {
  .c0 {
    box-pack: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-pack: January;
  }
}

@media April {
  .c0 {
    box-pack: December;
  }
}

@media January {
  .c0 {
    box-pack: April;
  }
}

@media April {
  .c0 {
    box-pack: May;
  }
}

@media June {
  .c0 {
    box-pack: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-pack: January;
  }
}

@media April {
  .c0 {
    box-pack: December;
  }
}

@media January {
  .c0 {
    box-pack: April;
  }
}

@media April {
  .c0 {
    box-pack: May;
  }
}

@media June {
  .c0 {
    box-pack: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders postitive number 1`] = `
Array [
  .c0 {
  box-pack: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders string 1`] = `
Array [
  .c0 {
  box-pack: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxPack renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`boxPack renders valid theme path 1`] = `
Array [
  .c0 {
  box-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
